tests/positive/exceptions/custom_exception_basic/input.ci
structure AppException : RuntimeException {}

void main() {
    AppException e = clone AppException;
    e.message = "app error";
    try {
        throw e;
    } catch (AppException e) {
        print("AppException: " + e.message + "\n");
    }
    print("done\n");
}
