tests/negative/semantic/import_depth_limit/input.ci
import "d01.ci";
void main() {}
